create new student

--- a/views/index.pug
+++ b/views/index.pug
@@ -15,5 +15,7 @@ block content
         td=student.lastname
         td=student.email
         td=student.age
+  br
+  a(href='/students/add') Add Student 
 
 
