--- a/views/detail.pug
+++ b/views/detail.pug
@@ -20,4 +20,8 @@ block content
     input(name="age" value=student.age type="number")
     br
     input(type='submit' value="update")
+  button#deleteStudent(studentId=student._id) Delete
 
+block script
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
+  script(src="/js/main.js")
