--- a/views/chat.pug
+++ b/views/chat.pug
@@ -49,11 +49,13 @@ block style
     }
 
 block content
+  if (user)
+    p#username=user.username
+    a(href='/user/logout') Logout
   ul#messages
     each message in messages
       li(style=`color: ${message.color}`) #{message.user}: #{message.message}
   form(action="")
-    input#user(type="text" placeholder="user" style="margin-bottom: 10px;" required)
     input#m(type="text" required)
     button Send
 
@@ -63,10 +65,11 @@ block script
   script.
     const socket = io();
     const color = `#${(0x1000000 + (Math.random()) * 0xffffff).toString(16).substr(1, 6)}` ;
-
+    const user = !{JSON.stringify(user)};
+  
     $('form').submit(function(e) {
       e.preventDefault();
-      socket.emit('chat message', { color, message: $('#m').val(), user: $('#user').val() });
+      socket.emit('chat message', { color, message: $('#m').val(), user: user.username });
       $('#m').val('')
     })
     socket.on('chat broadcast', (obj) => {
